--- a/frontend/src/app/analyze/analyze.component.html
+++ b/frontend/src/app/analyze/analyze.component.html
@@ -8,7 +8,7 @@
 
         <a target="_blank" [href]="node.url">
           <span class="suite-title">{{ node.title }} </span>
-          <img class="favicon" [src]="getIcon(node)"/>
+          <!--img class="favicon" [src]="getIcon(node)"/-->
         </a>
 
         <button mat-stroked-button (click)="removeNode(node)">
