--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -47,13 +47,69 @@ html {
 
 .popup {
   padding: 10px;
+  transition: min-height, min-width 0.3s;
+  min-height: 230px;
+  min-width: 0;
+}
+
+.popup.show-modal {
+  min-height: 450px;
+  min-width: 450px;
 }
 
 .line {
   margin-top: 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.modal.open {
+  width: 96% !important;
+  max-height: 96% !important;
+  top: 2% !important;
+}
+
+.found__list {
+  padding: 1rem;
+}
+.found__image {
+  max-width: 5rem;
+  margin-right: 0.7rem;
+}
+.found__item {
+  display: flex;
+  margin-bottom: 1rem;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
+  align-items: flex-start;
+}
+.found__item:hover {
+  background: rgba(79, 79, 216, 0.05);
+}
+.found__date {
+  font-weight: 500;
+  font-size: 0.8rem;
+}
+.found__name {
+  font-weight: 500;
+  line-height: 1.2em;
+  margin-bottom: 0.3rem;
+}
+.found__description {
+  font-size: 0.9rem;
+  max-height: 5.2em;
+  overflow: auto;
+  line-height: 1.2em;
+}
+.app-stars {
+  --star-size: 10px;
+  margin-top: 8px;
+  display: none;
+}
+.app-stars.show {
+  display: flex;
 }
 
 /* material */
