--- a/frontend/src/app/components/status/status.component.html
+++ b/frontend/src/app/components/status/status.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-label>Статус</mat-label>
-  <mat-select [value]="value" (value)="value=$event;onChange($event)">
+  <mat-select [value]="value" (selectionChange)="handleChange($event)">
     <mat-option *ngFor="let status of statusList" [value]="status.status">
       {{ status.name }}
     </mat-option>
