--- a/frontend/projects/cabinet/src/assets/icomoon/style.css
+++ b/frontend/projects/cabinet/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot');
-  src:  url('icomoon.eot') format('embedded-opentype'),
-    url('icomoon.ttf') format('truetype'),
-    url('icomoon.woff') format('woff'),
-    url('icomoon.svg') format('svg');
+  src:  url('/cabinet/assets/icomoon/icomoon.eot');
+  src:  url('/cabinetassets/icomoon/icomoon.eot') format('embedded-opentype'),
+    url('/cabinet/assets/icomoon/icomoon.ttf') format('truetype'),
+    url('/cabinet/assets/icomoon/icomoon.woff') format('woff'),
+    url('/cabinet/assets/icomoon/icomoon.svg') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
