--- a/frontend/projects/cabinet/src/assets/icomoon/style.css
+++ b/frontend/projects/cabinet/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/cabinet/assets/icomoon/icomoon.eot');
-  src:  url('/cabinetassets/icomoon/icomoon.eot') format('embedded-opentype'),
-    url('/cabinet/assets/icomoon/icomoon.ttf') format('truetype'),
-    url('/cabinet/assets/icomoon/icomoon.woff') format('woff'),
-    url('/cabinet/assets/icomoon/icomoon.svg') format('svg');
+  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?xl7va5');
+  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?xl7va5#iefix') format('embedded-opentype'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.ttf?xl7va5') format('truetype'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.woff?xl7va5') format('woff'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.svg?xl7va5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,7 +13,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -25,12 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-navigate:before {
+  content: "\e903";
+}
+
 .icon-close:before {
   content: "\e902";
 }
-.icon-arrow_upward:before {
+
+.icon-arrow_up:before {
   content: "\e901";
 }
+
 .icon-delete:before {
   content: "\e900";
 }
