--- a/frontend/projects/cabinet/src/app/pages/main/app.component.html
+++ b/frontend/projects/cabinet/src/app/pages/main/app.component.html
@@ -12,18 +12,23 @@
     </mat-radio-button>
   </mat-radio-group>
 
-  <app-clever-search class="search__input"
-                     [keys]="searchKeys"
-                     [status]="searchStatus$ | async"
-                     (statusChanges)="updateSearch($event)"></app-clever-search>
+  <app-clever-search
+    class="search__input"
+    [keys]="searchKeys"
+    [status]="searchStatus$ | async"
+    (statusChanges)="updateSearch($event)"
+  ></app-clever-search>
 </div>
 
 <nav mat-tab-nav-bar backgroundColor="primary">
-  <a mat-tab-link
-     *ngFor="let link of (navLinks$ | async)"
-     [routerLink]="link.path"
-     routerLinkActive #rla="routerLinkActive"
-     [active]="rla.isActive">
+  <a
+    *ngFor="let link of (navLinks$ | async)"
+    mat-tab-link
+    [routerLink]="link.path"
+    routerLinkActive
+    #rla="routerLinkActive"
+    [active]="rla.isActive"
+  >
     {{ link.name }}
   </a>
 </nav>
