--- a/frontend/projects/cabinet/src/app/pages/main/app.component.scss
+++ b/frontend/projects/cabinet/src/app/pages/main/app.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
-@import '../../../../node_modules/@angular/material/theming';
+@import "../../../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+@import '../../../../../../node_modules/@angular/material/theming';
 
 .search {
   display: flex;
