--- a/frontend/projects/popup/src/app/components/founded-list/founded-list.component.html
+++ b/frontend/projects/popup/src/app/components/founded-list/founded-list.component.html
@@ -13,5 +13,9 @@
       </div>
       <img class="image" [src]="item.image">
     </div>
+
+    <div *ngIf="!list.length" class="empty">
+      Empty
+    </div>
   </div>
 </div>
