--- a/frontend/projects/cabinet/src/app/pages/analyze/components/assigner/assigner.component.html
+++ b/frontend/projects/cabinet/src/app/pages/analyze/components/assigner/assigner.component.html
@@ -1,5 +1,8 @@
-<button class="assigner__button" mat-raised-button
-        *ngFor="let item of (structList$ | async)"
-        (click)="toStruct(item.path)">
+<button
+  *ngFor="let item of structList"
+  class="assigner__button"
+  mat-raised-button
+  (click)="toStruct(item.path)"
+>
   {{ item.name }}
 </button>
