--- a/frontend/projects/cabinet/src/app/pages/analyze/analyze.component.scss
+++ b/frontend/projects/cabinet/src/app/pages/analyze/analyze.component.scss
@@ -17,3 +17,27 @@
 .suite-title {
   margin-right: 5px;
 }
+
+.button-toggle {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  height: 25px;
+  justify-content: center;
+  padding: 0;
+  transform: rotate(90deg);
+  width: 25px;
+
+  &.-expanded {
+    transform: rotate(180deg);
+  }
+}
+
+.node-name {
+  margin: 0 7px 0 5px;
+}
+
+.assigner {
+  margin-left: 12px;
+}
