--- a/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.html
+++ b/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div *ngIf="!list.length" class="empty">
-      Empty
+      Не найдено, уточните запрос
     </div>
   </div>
 </div>
