--- a/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.scss
+++ b/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.scss
@@ -55,3 +55,12 @@
   z-index: 2;
   background: rgb(255 255 255 / 85%);
 }
+
+.empty {
+  padding: 10px;
+  text-align: center;
+  color: #ff4081;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 14px;
+}
