--- a/frontend/projects/cabinet/src/app/pages/main/app.component.scss
+++ b/frontend/projects/cabinet/src/app/pages/main/app.component.scss
@@ -1,25 +1,15 @@
-.search {
-  display: flex;
-
-  &__input {
-    flex: 1;
-  }
-
-  &__setting {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    display: flex;
-  }
-
-  &__setting-item {
-    margin-right: 0.5rem;
-  }
-}
-
-.app {
+:host {
   border: 5px solid #3f51b5;
-  display: block;
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   box-sizing: border-box;
   padding: 5px;
+  overflow: hidden;
+}
+
+.router-content {
+  flex: 1;
+  overflow: auto;
+  height: calc(100vh - 58px);
 }
