--- a/frontend/projects/shared/popup-add-item/components/card-edit/card-edit.component.html
+++ b/frontend/projects/shared/popup-add-item/components/card-edit/card-edit.component.html
@@ -44,7 +44,7 @@
       *ngIf="isShowLibrary"
       mat-raised-button
       color="primary"
-      [href]="'/cabinet/index.html?/' + selectedType"
+      [href]="'/cabinet/index.html?/#/' + formGroup.get('type')?.value"
       target="_blank"
     >
       Библиотека
