--- a/frontend/projects/cabinet/src/app/pages/settings/settings.component.scss
+++ b/frontend/projects/cabinet/src/app/pages/settings/settings.component.scss
@@ -8,5 +8,14 @@
 }
 
 .button {
-  width: 150px;
+  min-width: 150px;
+}
+
+.services {
+  margin-top: 30px;
+}
+
+.panel {
+  display: block;
+  max-width: 900px;
 }
