--- a/frontend/projects/popup/src/app/app.component.scss
+++ b/frontend/projects/popup/src/app/app.component.scss
@@ -1,8 +1,14 @@
+@import "projects/shared/styles/breakpoint";
+
 :host {
   display: block;
   padding: 5px;
   min-height: 350px;
-  width: 300px;
+  min-width: 300px;
+
+  @include isMobile() {
+    width: calc(100% - 8px);
+  }
 }
 
 .popup-import {
