--- a/frontend/projects/cabinet/src/assets/icomoon/style.css
+++ b/frontend/projects/cabinet/src/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?5wkn68');
-  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?5wkn68#iefix') format('embedded-opentype'),
-  url('/cabinet/assets/icomoon/fonts/icomoon.ttf?5wkn68') format('truetype'),
-  url('/cabinet/assets/icomoon/fonts/icomoon.woff?5wkn68') format('woff'),
-  url('/cabinet/assets/icomoon/fonts/icomoon.svg?5wkn68#icomoon') format('svg');
+  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?3cii5m');
+  src: url('/cabinet/assets/icomoon/fonts/icomoon.eot?3cii5m#iefix') format('embedded-opentype'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.ttf?3cii5m') format('truetype'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.woff?3cii5m') format('woff'),
+  url('/cabinet/assets/icomoon/fonts/icomoon.svg?3cii5m#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,12 +25,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-folder:before {
-  content: "\e92f";
+.icon-anime:before {
+  content: "\e905";
 }
 
-.icon-search:before {
-  content: "\e986";
+.icon-film:before {
+  content: "\e904";
+}
+
+.icon-article:before {
+  content: "\e903";
 }
 
 .icon-close:before {
@@ -43,4 +47,28 @@
 
 .icon-delete:before {
   content: "\e900";
+}
+
+.icon-ticket:before {
+  content: "\e939";
+}
+
+.icon-tv:before {
+  content: "\e95b";
+}
+
+.icon-config:before {
+  content: "\e994";
+}
+
+.icon-bookmarks:before {
+  content: "\e9d3";
+}
+
+.icon-folder:before {
+  content: "\e92f";
+}
+
+.icon-search:before {
+  content: "\e986";
 }
