--- a/frontend/projects/popup/src/app/components/import/import.component.html
+++ b/frontend/projects/popup/src/app/components/import/import.component.html
@@ -45,7 +45,7 @@
       *ngIf="foundedList$ | async as foundedList; else emptyList"
       [list]="foundedList"
       [genres]="genres$ | async"
-      (selectedChange)="selectItem(foundedList, $event)"
+      (selectedChange)="selectItem($event)"
     ></app-founded-list>
 
     <ng-template #emptyList>
