--- a/frontend/projects/shared/popup-add-item/components/popup/popup.component.html
+++ b/frontend/projects/shared/popup-add-item/components/popup/popup.component.html
@@ -13,7 +13,7 @@
     *ngIf="foundedList$ | async as foundedList"
     [list]="foundedList"
     [genres]="genres$ | async"
-    (selectedChange)="selectItemId($event)"
+    (selectedChange)="selectItem($event)"
   ></app-founded-list>
 </ng-container>
 
