--- a/frontend/projects/cabinet/src/app/pages/settings/settings.component.scss
+++ b/frontend/projects/cabinet/src/app/pages/settings/settings.component.scss
@@ -1,5 +1,8 @@
 :host {
   overflow: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 15px;
 }
 
 .input-file {
@@ -11,11 +14,16 @@
   min-width: 150px;
 }
 
-.services {
-  margin-top: 30px;
-}
-
 .panel {
   display: block;
-  max-width: 900px;
+  max-width: 700px;
+
+  &.-next {
+    margin-top: 15px;
+    margin-bottom: 5px;
+  }
+}
+
+.form {
+  max-width: 402px;
 }
