frontend v.1.4.1 fix genres and upadate popup

--- a/frontend/projects/shared/popup-add-item/components/card-edit/card-edit.component.html
+++ b/frontend/projects/shared/popup-add-item/components/card-edit/card-edit.component.html
@@ -46,7 +46,7 @@
   </div>
 
   <mat-form-field class="textarea-box">
-    <mat-label>Коммент</mat-label>
+    <mat-label>Комментарий</mat-label>
     <textarea matInput formControlName="comment"></textarea>
   </mat-form-field>
 </div>
