--- a/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.scss
+++ b/frontend/projects/shared/popup-add-item/components/founded-list/founded-list.component.scss
@@ -11,49 +11,15 @@
   display: flex;
 }
 
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .item {
   min-width: 200px;
   width: 200px;
   height: 270px;
-  position: relative;
 
-  & + & {
-    border-left: 2px solid #fff;
+  &.-founded {
+    width: 100%;
+    height: 250px;
   }
-}
-
-.title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: rgb(255 255 219 / 80%);
-  color: #000000;
-  padding: 2px;
-}
-
-.genres {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgb(255 255 219 / 80%);
-  color: #000000;
-  padding: 2px;
-}
-
-.button {
-  position: absolute;
-  top: -40px;
-  right: 3px;
-  z-index: 2;
-  background: rgb(255 255 255 / 85%);
 }
 
 .empty {
