--- a/frontend/projects/cabinet/src/assets/icomoon/style.css
+++ b/frontend/projects/cabinet/src/assets/icomoon/style.css
@@ -25,12 +25,196 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-anime:before {
-  content: "\e905";
+.icon-chevron-left:before {
+  content: "\e922";
+}
+
+.icon-chevron-right:before {
+  content: "\e920";
+}
+
+.icon-arrow-right:before {
+  content: "\e921";
+}
+
+.icon-desc:before {
+  content: "\e91e";
+}
+
+.icon-asc:before {
+  content: "\e91f";
+}
+
+.icon-ticket:before {
+  content: "\e939";
+}
+.icon-tv:before {
+  content: "\e95b";
+}
+
+.icon-config:before {
+  content: "\e994";
+}
+
+.icon-folder:before {
+  content: "\e92f";
+}
+
+.icon-search:before {
+  content: "\e986";
 }
 
 .icon-film:before {
   content: "\e904";
+}
+
+.icon-anime .path1:before {
+  content: "\e905";
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path2:before {
+  content: "\e906";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+
+.icon-anime .path3:before {
+  content: "\e907";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path4:before {
+  content: "\e908";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path5:before {
+  content: "\e909";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path6:before {
+  content: "\e90a";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path7:before {
+  content: "\e90b";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+
+.icon-anime .path8:before {
+  content: "\e90c";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path9:before {
+  content: "\e90d";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path10:before {
+  content: "\e90e";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path11:before {
+  content: "\e90f";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path12:before {
+  content: "\e910";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path13:before {
+  content: "\e911";
+  margin-left: -1em;
+  color: rgb(245, 243, 239);
+}
+
+.icon-anime .path14:before {
+  content: "\e912";
+  margin-left: -1em;
+  color: rgb(245, 243, 239);
+}
+
+.icon-anime .path15:before {
+  content: "\e913";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path16:before {
+  content: "\e914";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path17:before {
+  content: "\e915";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path18:before {
+  content: "\e916";
+  margin-left: -1em;
+  color: rgb(59, 68, 79);
+}
+
+.icon-anime .path19:before {
+  content: "\e917";
+  margin-left: -1em;
+  color: rgb(247, 251, 251);
+}
+
+.icon-anime .path20:before {
+  content: "\e918";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path21:before {
+  content: "\e919";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path22:before {
+  content: "\e91a";
+  margin-left: -1em;
+  color: rgb(247, 251, 251);
+}
+
+.icon-anime .path23:before {
+  content: "\e91b";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path24:before {
+  content: "\e91c";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
+}
+
+.icon-anime .path25:before {
+  content: "\e91d";
+  margin-left: -1em;
+  color: rgb(59, 67, 79);
 }
 
 .icon-article:before {
@@ -47,28 +231,4 @@
 
 .icon-delete:before {
   content: "\e900";
-}
-
-.icon-ticket:before {
-  content: "\e939";
-}
-
-.icon-tv:before {
-  content: "\e95b";
-}
-
-.icon-config:before {
-  content: "\e994";
-}
-
-.icon-bookmarks:before {
-  content: "\e9d3";
-}
-
-.icon-folder:before {
-  content: "\e92f";
-}
-
-.icon-search:before {
-  content: "\e986";
 }
